--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Demo Page</title>
+        <link rel="stylesheet" href="main.css">
+        <script src="given-resources/icons/iconic.min.js"></script>
+		<!-- https://useiconic.com -->
+    </head>
+    <body>
+        <header>
+            <div class="bg-white first">
+                <div class="box">
+                    <h1>Creative <span>Corner</span></h1>
+                    <ul>
+                        <li>Home</li>
+                        <li>Find Talent</li>
+                        <li>Find a Job</li>
+                        <li><a href=""><img class="iconic iconic-md" src="given-resources/icons/social.svg" alt="Facebook"></a></li>
+                        <li><a href=""><img class="iconic iconic-md" src="given-resources/icons/envelope.svg" alt="Twitter"></a></li>
+                        <li><a href=""><img class="iconic iconic-md" src="given-resources/icons/social.svg" alt="Instagram"></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bg-people">
+                <div class="box">
+                    <h1>FRESH<br>TALENT <span>+</span><br>TOP<br>EMPLOYERS<br><span>CREATE YOUR FUTURE WITH US</span></h1>
+                    <a href="#">FIND TALENT</a>
+                    <a href="#">FIND A JOB</a>
+                </div>
+            </div>
+        </header>
+        <nav>
+            <div class="bg-gold">
+                <div class="box">
+                    <ul>
+                        <li><a href="#"><span><img class="iconic iconic-md" src="given-resources/icons/pencil.svg" alt="pencil"></span><span>link 1</span></a></li>
+                        <li><a href="#"><span><img class="iconic iconic-md" src="given-resources/icons/lightbulb.svg" alt="pencil"></span><span>link 2</span></a></li>
+                        <li><a href="#"><span><img class="iconic iconic-md" src="given-resources/icons/envelope.svg" alt="pencil"></span><span>link 3</span></a></li>
+                        <li><a href="#"><span><img class="iconic iconic-md" src="given-resources/icons/chat.svg" alt="pencil"></span><span>link 4</span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <main>
+            <div class="bg-white second">
+                <div class="box">
+                    <h1><span>+</span> ABOUT US<br><span>people behind creative corner</span></h1>
+                    <ul>
+                        <li><img src="given-resources/people/person-1.jpg" alt="person-1"></li>
+                        <li><img src="given-resources/people/person-2.jpg" alt=""></li>
+                        <li><img src="given-resources/people/person-3.jpg" alt=""></li>
+                        <li><img src="given-resources/people/person-4.jpg" alt=""></li>
+                    </ul>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique iste reiciendis, molestiae animi mollitia architecto, temporibus! Inventore sed, sit animi deserunt eligendi, autem, ratione, doloribus ea aliquid illum ipsam odit!</p>
+                    <p>Cum nesciunt, vero quae ducimus amet impedit praesentium eligendi quia nam nostrum velit optio numquam rem recusandae id magnam suscipit rerum eius animi corporis voluptas quis deserunt. Ab, architecto! A!</p>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="bg-black">
+                <div class="box">
+                   <div class="container">
+                        <h1><span>+</span> Contact Us<br><span>over the phone or online</span></h1>
+                        <ul>
+                            <li>123-456-7890</li>
+                            <li>yourpage@mail.com</li>
+                        </ul>
+                        <img src="given-resources/maps/ottawa-1.jpg" alt="Ottawa">
+                    </div>
+                    <div class="container">
+                        <form>
+                            <div class="form-box"><input type="text" placeholder="name"></div>
+                            <div class="form-box"><input type="text" placeholder="email"></div>
+                            <div class="form-box"><input type="text" placeholder="subject"></div>
+                            <div class="form-box"><textarea cols="30" rows="10" placeholder="message"></textarea></div>
+                            <div class="form-box"><input type="submit" value="send"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-white third">
+                <div class="box">
+                    <p>Copy rights or perhaps some additional info about developer ...</p>
+                </div>
+            </div>
+        </footer>
+    </body>
+</html>
